[gd_scene load_steps=23 format=3 uid="uid://bbtkbj3sj8rn1"]

[ext_resource type="Script" path="res://Scene_Switcher/enemy/helicopter.gd" id="1_kj8kn"]
[ext_resource type="PackedScene" uid="uid://bow40sr71gndy" path="res://Scene_Switcher/ammo/bullet.tscn" id="2_41typ"]
[ext_resource type="Texture2D" uid="uid://b8cbsib6jkerg" path="res://Scene_Switcher/player/asset/Armelvl1.png" id="3_anmkq"]
[ext_resource type="Texture2D" uid="uid://xbftkamo1wfp" path="res://Scene_Switcher/enemy/asset/Helicot_Shadow.png" id="4_8lukf"]
[ext_resource type="Texture2D" uid="uid://blmnrs6xalb6u" path="res://Scene_Switcher/enemy/asset/Cockpit_Helicot.png" id="4_on4u8"]
[ext_resource type="Texture2D" uid="uid://b8x6uo7qtqes3" path="res://Scene_Switcher/player/asset/Rotor1.png" id="5_83xji"]
[ext_resource type="Texture2D" uid="uid://c8qa45bgvehb1" path="res://Scene_Switcher/enemy/asset/vortex.png" id="5_wou5k"]
[ext_resource type="PackedScene" uid="uid://b5j1ql6oqb6os" path="res://Scene_Switcher/enemy/enemy_explosion.tscn" id="7_5dhhy"]
[ext_resource type="Texture2D" uid="uid://drhqwrt536g3m" path="res://Scene_Switcher/ammo/asset/fire_sparkles.png" id="7_6ptmc"]
[ext_resource type="Animation" uid="uid://biigdmqba1ogp" path="res://Scene_Switcher/ammo/animation/fire_basis.tres" id="9_35gd8"]
[ext_resource type="Texture2D" uid="uid://ds82cuflmciub" path="res://Scene_Switcher/enemy/asset/target_follow.png" id="9_cqw7r"]
[ext_resource type="PackedScene" uid="uid://ch4qvgnjamob2" path="res://Scene_Switcher/enemy/fire_weapon.tscn" id="10_yi53s"]
[ext_resource type="AudioStream" uid="uid://tnta4wntf1pt" path="res://Scene_Switcher/sound/explosion.mp3" id="13_qotea"]

[sub_resource type="Animation" id="Animation_37p6c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/rotor_sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_2qpwm"]
resource_name = "rotor"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/rotor_sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rau1f"]
_data = {
"RESET": SubResource("Animation_37p6c"),
"rotor": SubResource("Animation_2qpwm")
}

[sub_resource type="Gradient" id="Gradient_gb1ns"]
offsets = PackedFloat32Array(0, 0.705521, 1)
colors = PackedColorArray(0.219501, 0.219501, 0.219501, 1, 0.490196, 0.490196, 0.490196, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m2pqs"]
size = Vector2(64, 128)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pv8mj"]
_data = {
"fire_basis": ExtResource("9_35gd8")
}

[sub_resource type="Animation" id="Animation_814xp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("target_follow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.984314, 0.309804, 0, 1)]
}

[sub_resource type="Animation" id="Animation_63epd"]
resource_name = "target_on_player"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("target_follow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.984314, 0.309804, 0, 1), Color(0.984314, 0.309804, 0, 0.12549), Color(0.984314, 0.309804, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s6waw"]
_data = {
"RESET": SubResource("Animation_814xp"),
"target_on_player": SubResource("Animation_63epd")
}

[node name="helicopter" type="CharacterBody2D"]
z_index = 4
collision_layer = 2
collision_mask = 11
motion_mode = 1
script = ExtResource("1_kj8kn")
ammo_scene = ExtResource("2_41typ")

[node name="Sprite2D" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_rau1f")
}
autoplay = "rotor"
speed_scale = 2.0

[node name="weapon_sprite" type="Sprite2D" parent="Sprite2D"]
modulate = Color(0.376471, 0.396078, 0.290196, 1)
rotation = -3.14159
scale = Vector2(0.305, 0.305)
texture = ExtResource("3_anmkq")

[node name="shadow" type="Sprite2D" parent="Sprite2D"]
modulate = Color(1, 1, 1, 0.580392)
z_index = -1
position = Vector2(-35, 20)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_8lukf")
flip_v = true

[node name="cockpit_sprite" type="Sprite2D" parent="Sprite2D"]
modulate = Color(0.376471, 0.396078, 0.290196, 1)
position = Vector2(7.94747e-14, 8)
rotation = -3.14159
scale = Vector2(0.305, 0.305)
texture = ExtResource("4_on4u8")
offset = Vector2(0, 29.5082)

[node name="rotor_sprite" type="Sprite2D" parent="Sprite2D"]
z_index = 1
position = Vector2(0.384537, 8.29899)
scale = Vector2(0.305, 0.305)
texture = ExtResource("5_83xji")
offset = Vector2(1.26078, 27.2098)

[node name="Explosion" parent="." instance=ExtResource("7_5dhhy")]

[node name="Smokes" type="Node2D" parent="."]

[node name="Smoke20" type="CPUParticles2D" parent="Smokes"]
position = Vector2(0, -56)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("5_wou5k")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_gb1ns")

[node name="Smoke40" type="CPUParticles2D" parent="Smokes"]
position = Vector2(-16, -16)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("5_wou5k")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_gb1ns")

[node name="Smoke60" type="CPUParticles2D" parent="Smokes"]
position = Vector2(16, 0)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("5_wou5k")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_gb1ns")

[node name="Smoke80" type="CPUParticles2D" parent="Smokes"]
position = Vector2(-16, 40)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("5_wou5k")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_gb1ns")

[node name="Death_Smoke" type="CPUParticles2D" parent="Smokes"]
position = Vector2(16, 56)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("5_wou5k")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_gb1ns")

[node name="fire_sparkles" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, 84)
scale = Vector2(0.33, 0.33)
texture = ExtResource("7_6ptmc")
flip_v = true
vframes = 3
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_m2pqs")

[node name="target" type="Marker2D" parent="."]
position = Vector2(0, 72)

[node name="left_wall" type="RayCast2D" parent="."]
target_position = Vector2(-50, 2.08165e-12)
collision_mask = 16

[node name="right_wall" type="RayCast2D" parent="."]
target_position = Vector2(50, 2.08165e-12)
collision_mask = 16

[node name="right_shoot" type="RayCast2D" parent="."]
position = Vector2(-16, 64)
target_position = Vector2(0, 600)

[node name="left_shoot" type="RayCast2D" parent="."]
position = Vector2(16, 64)
target_position = Vector2(0, 600)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pv8mj")
}

[node name="target_follow" type="Sprite2D" parent="."]
modulate = Color(0.984314, 0.309804, 0, 1)
z_index = 10
scale = Vector2(0.4, 0.4)
texture = ExtResource("9_cqw7r")

[node name="anim_target_follow" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s6waw")
}

[node name="fire_weapon" parent="." instance=ExtResource("10_yi53s")]

[node name="explosion_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_qotea")
bus = &"SFX"
